--- a/src/AuthorQuiz.css
+++ b/src/AuthorQuiz.css
@@ -11,11 +11,14 @@
     font-size: 2em;
 }
 .ashbg {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     background-color: rgb(233,234,239);
-    height: 125px;
-    text-align: left;
-    padding-top: 10px;
+    height: 150px;
+    /* text-align: left; */
+    display: flex;
+    flex-direction: column;
+    /* padding-top: 10px; */
+    justify-content: center;
 }
 
 .img1 {
@@ -37,7 +40,7 @@
 }
 #line1
 {
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 .btndv button
 {
@@ -53,4 +56,7 @@
     border: 0px;
     border-left: 3px solid rgb(213,224,241);
   
+}
+.btn1:hover {
+    background-color: rgb(233,234,239);
 }
